# utracker

./: .gitignore  API.md  CMakeLists.txt  LICENSE  README.md  build.sh  myDb.db  uTracker_server
client/: CMakeLists.txt  main.cpp
client/Items/: Items.pro  authorization.cpp  authorization.h  main.cpp  main.qml  qml.qrc  user.h  usermanager.cpp  usermanager.h
client/Items/Components/: S_Button_1.qml  S_Input_1.qml  UserForms.qml
client/Items/Components/src/: card.cpp  card.h
client/Items/Windows/: CardItem.qml  CardListItem.qml  CardView.qml  DeskItem.qml  InfoSidebar.qml  MainAccountWindow.qml  MoveToDialog.qml  SignIn.qml  SignUp.qml
client/Items/model/: cardlistsmodel.cpp  cardlistsmodel.h  cardsmodel.cpp  cardsmodel.h
client/src/: CMakeLists.txt  Themes.qml  authorization.cpp  authorization.h  client.cpp  client.h  hash.h  main.qml  qml.qrc  requests.cpp  requests.h  responsehandler.cpp  responsehandler.h  user.cpp  user.h  usermanager.cpp  usermanager.h  workflow.cpp  workflow.h
client/src/Components/: S_Button_1.qml  S_Input_1.qml  SearchBox.qml  UserForms.qml
client/src/Components/src/: card.h
client/src/Windows/: CardItem.qml  CardListItem.qml  CardView.qml  DeskItem.qml  InfoSidebar.qml  MainAccountWindow.qml  MoveToDialog.qml  Profile.qml  SignIn.qml  SignUp.qml
client/src/material/icons/: core_icons.qrc
client/src/material/src/controls/: Action.qml
client/src/material/src/window/: ActionBar.qml  NavigationDrawer.qml
client/src/model/: cardlistsmodel.cpp  cardlistsmodel.h  cardsmodel.cpp  cardsmodel.h  descriptionmodel.cpp  descriptionmodel.h  listworkflowsmodel.cpp  listworkflowsmodel.h
server/: API.md  CMakeLists.txt  main.cpp
server/src/: CMakeLists.txt  connection.cpp  connection.h  database.cpp  database.h  hash.cpp  responses.cpp  responses.h  runnable.cpp  runnable.h  server.cpp  server.h
